npx parcel index.html
type=module as React can’t understand import

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "author": "Akshay Sharma",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "repository": {
     "type": "git",
     "url": "git@personal.github.com:akshaykrsharma/ReactLearning.git"
   },
   "devDependencies": {
-    "parcel": "^2.8.2"
+    "parcel": "^2.8.2",
+    "process": "^0.11.10"
   }
 }
