--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "LearningReactJS",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "Akshay Sharma",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +19,7 @@
     "url": "git@personal.github.com:akshaykrsharma/ReactLearning.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   }
