--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.7",
     "parcel": "^2.8.2",
+    "postcss": "^8.4.21",
     "process": "^0.11.10",
     "tailwindcss": "^3.2.4"
   }
