- basic test cases - npm i -D @testing-library/react - npm i -D jest
- npx jest init
- npm i -D jest-environment-jsdom
- npm install --save-dev babel-jest @babel/core @babel/preset-env

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,11 @@
 {
-	"plugins": [
+	"presets": [
 		[
-			"transform-remove-console",
+			"@babel/preset-env",
 			{
-				"exclude": [
-					"error",
-					"warn"
-				]
+				"targets": {
+					"node": "current"
+				}
 			}
 		]
 	]
